Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -70,25 +70,73 @@
 </head>
 <body>
   <!-- ======= Mini Header ======= -->
-  <header class="mini-header py-2">
-    <div class="container py-2 d-none d-sm-none d-md-none d-xl-flex header-top justify-content-between">
-      <div class="align-self-center d-flex">
-        <a class="mr-0 mr-md-3 c-black d-inline-flex" href="tel:+13097914105"><img class="mr-2" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt="usa"> +1 309 791 4105</a>
-        <a class="mr-0 c-black d-inline-flex" href="tel:+442081338639"><img class="mr-2" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/uk-flag.svg" alt="uk"> +44 20 8133 8639</a>
-      </div>
-      <div>
-        <a class="mr-0 c-black d-inline-flex shadow-btn" href="https://www.hyperlinkinfosystem.com/press-releases.html">Press Release</a>
-        <a class="mr-2 c-black d-inline-flex shadow-btn" href="https://www.hyperlinkinfosystem.com/our-portfolio">Our Fresh Work</a>
+  <header class="mini-header py-3 mb-4">
+    <div class="container px-lg-0">
+      <div class="row justify-content-between align-items-center">
+        <div class="top-phone">
+          <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302 6021298</a>
+          <a class="text-decoration-none text-dark" href="tel:+923000677488"><img src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
+        </div>
+        <div class="top-btn">
+          <a class="btn btn-primary shadow-none py-2 mr-2" href="">Order Now</a>
+          <a class="btn btn-primary shadow-none py-2" href="">Client Area</a>
+        </div>
       </div>
     </div>
   </header>
   <!-- ======= Top Header ======= -->
-  <header class="top-header sticky-top d-flex py-2">
-    <div class="container d-flex justify-content-between pr-0 pr-sm-0 pr-md-0 pr-lg-3 align-align-center">
-      <a class="cd-logo align-self-center py-1 py-xl-0" href=""><img width="153" height="50" class="logo-main" src="" alt=""></a>
+  <section class="main-bg">
+    <div class="container px-lg-0">
+      <div class="row">
+
+        <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
+          <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a>
+          <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link text-dark" href="">PSD To HTML</a>
+              <a class="nav-item nav-link text-dark" href="">Figma To HTML</a>
+              <a class="nav-item nav-link text-dark" href="">Sketch To HTML</a>
+              <a class="nav-item nav-link text-dark" href="">Adobe XD To HTML</a>
+              <a class="nav-item nav-link text-dark" href="">All Services</a>
+              <a class="nav-item nav-link text-dark" href="">FAQ</a>
+              <a class="nav-item nav-link text-dark" href="">Blog</a>
+            </div>
+          </div>
+        </nav>
+
+      </div>
+
+      <div class="row justify-content-between align-items-center" id="top_contnt">
+        <div class="heading px-lg-0 col-6">
+          <h2 class="sub-heading mb-3">Focus on business</h2>
+          <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
+          <p class="mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
+          <a class="btn btn-primary shadow-none py-2" href="">Get In Touch</a>
+        </div>
+  
+        <div class="main-img px-lg-0 col-6">
+          <img class="img-fluid" src="img/bg-img.png" alt="">
+        </div>
+      </div>
+
+      <!-- <div class="row">
+        <div class="top-icon col-12 rounded-pill d-flex justify-content-between align-items-center">
+          <img width="" height="50" src="img/html-icon.png" alt="">
+          <img width="" height="50" src="img/css-icon.png" alt="">
+          <img width="" height="50" src="img/figma-icon.png" alt="">
+          <img width="" height="50" src="img/xd-icon.png" alt="">
+          <img width="" height="50" src="img/sketch-icon.png" alt="">
+          <img width="" height="50" src="img/ps-icon .png" alt="">
+          <img width="" height="50" src="img/icon.png" alt="">
+          <img width="" height="50" src="img/id-icon.png" alt="">
+        </div>
+      </div> -->
+
     </div>
-  </header>
-  <!-- ======= Top Background ======= -->
+  </section>
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
