Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <a class="text-decoration-none text-dark" href="tel:+923000677488"><img src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
         </div>
         <div class="top-btn">
-          <a class="btn btn-primary shadow-none py-2 mr-2" href="">Order Now</a>
-          <a class="btn btn-primary shadow-none py-2" href="">Client Area</a>
+          <a class="btn shadow-none py-2 mr-2" href="">Order Now</a>
+          <a class="btn shadow-none py-2" href="">Client Area</a>
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@
           <h2 class="sub-heading mb-3">Focus on business</h2>
           <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
           <p class="mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
-          <a class="btn btn-primary shadow-none py-2" href="">Get In Touch</a>
+          <a class="btn shadow-none py-2" href="">Get In Touch</a>
         </div>
   
         <div class="main-img px-lg-0 col-6">
