Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         </div>
       </div>
 
-      <!-- <div class="row">
-        <div class="top-icon col-12 rounded-pill d-flex justify-content-between align-items-center">
+      <div class="row" id="services_icon">
+        <div class="top-icon col-12 py-3 px-5 d-flex justify-content-between align-items-center">
           <img width="" height="50" src="img/html-icon.png" alt="">
           <img width="" height="50" src="img/css-icon.png" alt="">
           <img width="" height="50" src="img/figma-icon.png" alt="">
@@ -133,7 +133,7 @@
           <img width="" height="50" src="img/icon.png" alt="">
           <img width="" height="50" src="img/id-icon.png" alt="">
         </div>
-      </div> -->
+      </div>
 
     </div>
   </section>
