Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 </head>
 <body>
   <!-- ======= Mini Header ======= -->
-  <header class="mini-header py-3 mb-4">
+  <header class="mini-header py-3 mb-3">
     <div class="container px-lg-0">
       <div class="row justify-content-between align-items-center">
         <div class="top-phone">
-          <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302 6021298</a>
-          <a class="text-decoration-none text-dark" href="tel:+923000677488"><img src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
+          <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img class="mr-2" width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302 6021298</a>
+          <a class="text-decoration-none text-dark" href="tel:+923000677488"><img class="mr-2"  width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
         </div>
         <div class="top-btn">
-          <a class="btn shadow-none py-2 mr-2" href="">Order Now</a>
-          <a class="btn shadow-none py-2" href="">Client Area</a>
+          <a class="btn theme-btn shadow-none border-0 py-2 px-3 mr-2" href="">Order Now</a>
+          <a class="btn login-btn shadow-none border-0 py-2 px-3" href="">Client Area</a>
         </div>
       </div>
     </div>
@@ -96,13 +96,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link text-dark" href="">PSD To HTML</a>
-              <a class="nav-item nav-link text-dark" href="">Figma To HTML</a>
-              <a class="nav-item nav-link text-dark" href="">Sketch To HTML</a>
-              <a class="nav-item nav-link text-dark" href="">Adobe XD To HTML</a>
-              <a class="nav-item nav-link text-dark" href="">All Services</a>
-              <a class="nav-item nav-link text-dark" href="">FAQ</a>
-              <a class="nav-item nav-link text-dark" href="">Blog</a>
+              <a class="nav-item nav-link" href="">PSD To HTML</a>
+              <a class="nav-item nav-link" href="">Figma To HTML</a>
+              <a class="nav-item nav-link" href="">Sketch To HTML</a>
+              <a class="nav-item nav-link" href="">Adobe XD To HTML</a>
+              <a class="nav-item nav-link" href="">All Services</a>
+              <a class="nav-item nav-link" href="">FAQ</a>
             </div>
           </div>
         </nav>
@@ -114,7 +113,7 @@
           <h2 class="sub-heading mb-3">Focus on business</h2>
           <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
           <p class="mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
-          <a class="btn shadow-none py-2" href="">Get In Touch</a>
+          <a class="btn theme-btn shadow-none py-2 px-3" href="" style="font-size: 20px;">Get In Touch</a>
         </div>
   
         <div class="main-img px-lg-0 col-6">
