--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
 
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a>
+          <!-- <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a> -->
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
