Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <a class="text-decoration-none text-dark" href="tel:+923000677488"><img class="mr-2"  width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
         </div>
         <div class="top-btn">
-          <a class="btn theme-btn shadow-none border-0 py-2 px-3 mr-2" href="">Order Now</a>
-          <a class="btn login-btn shadow-none border-0 py-2 px-3" href="">Client Area</a>
+          <a class="btn theme-btn border-0 py-2 px-3 mr-2" href="">Order Now</a>
+          <a class="btn login-btn border-0 py-2 px-3" href="">Client Area</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
       <div class="row">
 
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <!-- <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a> -->
+          <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a>
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -112,8 +112,8 @@
         <div class="heading px-lg-0 col-6">
           <h2 class="sub-heading mb-3">Focus on business</h2>
           <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
-          <p class="mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
-          <a class="btn theme-btn shadow-none py-2 px-3" href="" style="font-size: 20px;">Get In Touch</a>
+          <p class="slogan mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
+          <a class="btn theme-btn py-2 px-3" href="" style="font-size: 20px;">Get In Touch</a>
         </div>
   
         <div class="main-img px-lg-0 col-6">
@@ -122,7 +122,7 @@
       </div>
 
       <div class="row" id="services_icon">
-        <div class="top-icon col-12 py-3 px-5 d-flex justify-content-between align-items-center">
+        <div class="top-icon col-12 py-3 px-5 mb-5 d-flex justify-content-between align-items-center">
           <img width="" height="50" src="img/html-icon.png" alt="">
           <img width="" height="50" src="img/css-icon.png" alt="">
           <img width="" height="50" src="img/figma-icon.png" alt="">
@@ -136,6 +136,32 @@
 
     </div>
   </section>
+  <!-- ======= Core Development ======= -->
+  <article class="core-development mb-5">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-sm-4 px-lg-0">
+          <img class="img-fluid" width="" height="" src="img/process.png" alt="">
+        </div>
+        <div class="col-sm-6 px-lg-0">
+          <h2 class="article-heading mb-4">Core <span class="text-color">Development</span> Process</h2>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <div class="core-list mb-3">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div class="core-list mb-5">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div>
+            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Get In Touch</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
