--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
 
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <a class="logo navbar-brand" href=""><img width="160" height="70" src="img/iana-logo.png" alt="logo"></a>
+          <!-- <a class="logo navbar-brand" href=""><img width="160" height="70" src="" alt="logo"></a> -->
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -137,7 +137,7 @@
     </div>
   </section>
   <!-- ======= Core Development ======= -->
-  <article class="core-development mb-5">
+  <article class="core-development">
     <div class="container">
       <div class="row justify-content-between align-items-center">
         <div class="col-sm-4 px-lg-0">
@@ -157,6 +157,29 @@
           </div>
           <div>
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Get In Touch</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- ======= PSD to HTML ======= -->
+  <article class="psd-to-html">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 px-lg-0">
+          <h2 class="article-heading mb-4">PSD to HTML</h2>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <div class="core-list mb-3">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div class="core-list mb-5">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div>
+            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
       </div>
