Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
               <a class="nav-item nav-link" href="">Figma To HTML</a>
               <a class="nav-item nav-link" href="">Sketch To HTML</a>
               <a class="nav-item nav-link" href="">Adobe XD To HTML</a>
-              <a class="nav-item nav-link" href="">All Services</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">All Services</a>
+                <div class="dropdown-menu dropdown-menu-center">
+                  <a class="dropdown-item" href="#">InDesign To HTML</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Wireframe To HTML</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Zeplin To HTML</a>
+                </div>
+              </li>
               <a class="nav-item nav-link" href="">FAQ</a>
             </div>
           </div>
