Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
 
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <!-- <a class="logo navbar-brand" href=""><img width="160" height="70" src="" alt="logo"></a> -->
+          <a class="logo navbar-brand" href=""><img width="" height="" src="" alt=""></a>
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -174,8 +174,8 @@
   <!-- ======= PSD to HTML ======= -->
   <article class="psd-to-html">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 px-lg-0">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-6 px-lg-0">
           <h2 class="article-heading mb-4">PSD to HTML</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -191,9 +191,81 @@
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
+        <div class="col-4 px-lg-0">
+          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        </div>
       </div>
     </div>
   </article>
+  <!-- ======= Figma To HTML Explain ======= -->
+  <article class="figma-to-html">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-4 px-lg-0">
+          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        </div>
+        <div class="col-6 px-lg-0">
+          <h2 class="article-heading mb-4">Figma to HTML</h2>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <div class="core-list mb-3">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div class="core-list mb-5">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div>
+            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- ======= Responsive Devices ======= -->
+  <article class="responsive">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-6 px-lg-0">
+          <h2 class="article-heading mb-4">Responsive Devices</h2>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <div class="core-list mb-3">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div class="core-list mb-5">
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+            <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
+          </div>
+          <div>
+            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
+          </div>
+        </div>
+        <div class="col-4 px-lg-0">
+          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- ======= IT Services ======= -->
+  <section class="it-services mb-5">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-6">
+          <h2 class="it-heading mb-4">We run all Kinds of IT Services
+            that grow your Business
+          </h2>
+          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nisi ipsa, modi officia exercitationem magni ab magnam in quos nobis, error molestias quibusdam vitae provident autem odit maxime saepe quaerat.</p>
+        </div>
+        <div class="col-4">
+          <a class="btn btn-light border-0 px-4 mr-3" href="">Let's Start <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+          <a class="btn btn-outline-light py-2 px-4" href="">Talk with us</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
