Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 <body>
   <!-- ======= Mini Header ======= -->
   <header class="mini-header py-3 mb-3">
-    <div class="container px-lg-0">
+    <div class="inner-mini-header container px-lg-0">
       <div class="row justify-content-between align-items-center">
-        <div class="top-phone">
+        <div class="mini-header-phone">
           <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img class="mr-2" width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302 6021298</a>
           <a class="text-decoration-none text-dark" href="tel:+923000677488"><img class="mr-2"  width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
         </div>
-        <div class="top-btn">
+        <div class="mini-header-btn">
           <a class="btn theme-btn border-0 py-2 px-3 mr-2" href="">Order Now</a>
           <a class="btn login-btn border-0 py-2 px-3" href="">Client Area</a>
         </div>
@@ -86,11 +86,11 @@
   </header>
   <!-- ======= Top Header ======= -->
   <section class="main-bg">
-    <div class="container px-lg-0">
+    <div class="inner-main-bg container px-lg-0">
       <div class="row">
-
+        <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <a class="logo navbar-brand" href=""><img width="" height="" src="" alt=""></a>
+          <a class="logo navbar-brand" href=""><img width="170" height="70" src="img/iana-logo.svg" alt="ianasystems"></a>
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -108,16 +108,18 @@
                   <a class="dropdown-item" href="#">Wireframe To HTML</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Zeplin To HTML</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">InVision To HTML</a>
                 </div>
               </li>
               <a class="nav-item nav-link" href="">FAQ</a>
             </div>
           </div>
         </nav>
-
+        <!-- NAV END -->
       </div>
-
-      <div class="row justify-content-between align-items-center" id="top_contnt">
+      <!-- SLIDER -->
+      <div class="row align-items-center" id="slider">
         <div class="heading px-lg-0 col-6">
           <h2 class="sub-heading mb-3">Focus on business</h2>
           <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
@@ -129,7 +131,7 @@
           <img class="img-fluid" src="img/bg-img.png" alt="">
         </div>
       </div>
-
+      <!-- SERVICES ICON -->
       <div class="row" id="services_icon">
         <div class="top-icon col-12 py-3 px-5 mb-5 d-flex justify-content-between align-items-center">
           <img width="" height="50" src="img/html-icon.png" alt="">
@@ -142,17 +144,16 @@
           <img width="" height="50" src="img/id-icon.png" alt="">
         </div>
       </div>
-
     </div>
   </section>
   <!-- ======= Core Development ======= -->
   <article class="core-development">
-    <div class="container">
+    <div class="inner-core container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-sm-4 px-lg-0">
+        <div class="core-img col-4 px-lg-0">
           <img class="img-fluid" width="" height="" src="img/process.png" alt="">
         </div>
-        <div class="col-sm-6 px-lg-0">
+        <div class="core-intro col-6 px-lg-0">
           <h2 class="article-heading mb-4">Core <span class="text-color">Development</span> Process</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -173,7 +174,7 @@
   </article>
   <!-- ======= PSD to HTML ======= -->
   <article class="psd-to-html">
-    <div class="container">
+    <div class="inner-psd container">
       <div class="row justify-content-between align-items-center">
         <div class="col-6 px-lg-0">
           <h2 class="article-heading mb-4">PSD to HTML</h2>
@@ -191,8 +192,8 @@
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
-        <div class="col-4 px-lg-0">
-          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        <div class="col-6 d-flex justify-content-around px-lg-0">
+          <img class="img-fluid" width="380" height="460" src="img/psd-to-html.png" alt="">
         </div>
       </div>
     </div>
@@ -201,8 +202,8 @@
   <article class="figma-to-html">
     <div class="container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-4 px-lg-0">
-          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        <div class="col-6 px-lg-0">
+          <img class="img-fluid" width="380" height="460" src="img/psd-to-html.png" alt="">
         </div>
         <div class="col-6 px-lg-0">
           <h2 class="article-heading mb-4">Figma to HTML</h2>
@@ -243,8 +244,8 @@
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
-        <div class="col-4 px-lg-0">
-          <img class="img-fluid" width="" height="" src="img/psd-to-html.png" alt="">
+        <div class="col-6 d-flex justify-content-end px-lg-0">
+          <img class="img-fluid" width="460" src="img/responsive.png" alt="">
         </div>
       </div>
     </div>
@@ -253,7 +254,7 @@
   <section class="it-services mb-5">
     <div class="container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-6">
+        <div class="col-6 px-lg-0">
           <h2 class="it-heading mb-4">We run all Kinds of IT Services
             that grow your Business
           </h2>
