Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
       <!-- SLIDER -->
       <div class="row align-items-center" id="slider">
         <div class="heading px-lg-0 col-6">
-          <h2 class="sub-heading mb-3">Focus on business</h2>
-          <h1 class="main-heading mb-4">Our target is to reach the goal</h1>
-          <p class="slogan mb-5">Our vertical solutions expertise allows your  business to streamline workflow.</p>
-          <a class="btn theme-btn py-2 px-3" href="" style="font-size: 20px;">Get In Touch</a>
+          <h2 class="sub-heading mb-2">PSD to HTML Conversion</h2>
+          <h1 class="main-heading mb-3">
+            Website UI Design to <span class="text-color">HTML</span> Services
+          </h1>
+          <p class="slogan mb-5">
+            Get your website design prototypes and mockups converted into Pixel Perfect, Responsive, and Hand Coded HTML and WordPress websites with our cost effective and white labelled design to code conversion services for agencies.
+          </p>
+          <a class="btn theme-btn py-2 px-4" href="" style="font-size: 20px;">Get Started</a>
         </div>
   
         <div class="main-img px-lg-0 col-6">
