Latest Code by Kamran

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <div class="mini-header-btn">
           <a class="btn theme-btn border-0 py-2 px-3 mr-2" href="">Order Now</a>
           <a class="btn login-btn border-0 py-2 px-3" href="">Client Area</a>
+          <span class="divider"></span>
         </div>
       </div>
     </div>
@@ -90,7 +91,7 @@
       <div class="row">
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
-          <a class="logo navbar-brand" href=""><img width="170" height="70" src="img/iana-logo.svg" alt="ianasystems"></a>
+          <!-- <a class="logo navbar-brand" href=""><img width="" height="" src="" alt="ianasystems"></a> -->
           <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -138,14 +139,14 @@
       <!-- SERVICES ICON -->
       <div class="row" id="services_icon">
         <div class="top-icon col-12 py-3 px-5 mb-5 d-flex justify-content-between align-items-center">
-          <img width="" height="50" src="img/html-icon.png" alt="">
-          <img width="" height="50" src="img/css-icon.png" alt="">
-          <img width="" height="50" src="img/figma-icon.png" alt="">
-          <img width="" height="50" src="img/xd-icon.png" alt="">
-          <img width="" height="50" src="img/sketch-icon.png" alt="">
-          <img width="" height="50" src="img/ps-icon .png" alt="">
-          <img width="" height="50" src="img/icon.png" alt="">
-          <img width="" height="50" src="img/id-icon.png" alt="">
+          <img width="" height="54" src="img/html-icon.png" alt="">
+          <img width="" height="54" src="img/css-icon.png" alt="">
+          <img width="" height="54" src="img/figma-icon.png" alt="">
+          <img width="" height="54" src="img/xd-icon.png" alt="">
+          <img width="" height="54" src="img/sketch-icon.png" alt="">
+          <img width="" height="54" src="img/ps-icon .png" alt="">
+          <img width="" height="54" src="img/icon.png" alt="">
+          <img width="" height="54" src="img/id-icon.png" alt="">
         </div>
       </div>
     </div>
@@ -154,10 +155,10 @@
   <article class="core-development">
     <div class="inner-core container">
       <div class="row justify-content-between align-items-center">
-        <div class="core-img col-4 px-lg-0">
+        <div class="core-img col-12 col-lg-4 reverse px-lg-0">
           <img class="img-fluid" width="" height="" src="img/process.png" alt="">
         </div>
-        <div class="core-intro col-6 px-lg-0">
+        <div class="core-intro col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Core <span class="text-color">Development</span> Process</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -180,7 +181,7 @@
   <article class="psd-to-html">
     <div class="inner-psd container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-6 px-lg-0">
+        <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">PSD to HTML</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -196,7 +197,7 @@
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
-        <div class="col-6 d-flex justify-content-around px-lg-0">
+        <div class="col-12 col-lg-6 reverse d-flex justify-content-around px-lg-0">
           <img class="img-fluid" width="380" height="460" src="img/psd-to-html.png" alt="">
         </div>
       </div>
@@ -206,10 +207,10 @@
   <article class="figma-to-html">
     <div class="container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-6 px-lg-0">
-          <img class="img-fluid" width="380" height="460" src="img/psd-to-html.png" alt="">
+        <div class="col-12 col-lg-6 reverse px-lg-0">
+          <img class="img-fluid" width="400" height="460" src="img/figma-to-html.png" alt="">
         </div>
-        <div class="col-6 px-lg-0">
+        <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Figma to HTML</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -231,8 +232,8 @@
   <!-- ======= Responsive Devices ======= -->
   <article class="responsive">
     <div class="container">
-      <div class="row justify-content-between align-items-center">
-        <div class="col-6 px-lg-0">
+      <div class="row align-items-center">
+        <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Responsive Devices</h2>
           <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
@@ -248,7 +249,7 @@
             Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start</a>
           </div>
         </div>
-        <div class="col-6 d-flex justify-content-end px-lg-0">
+        <div class="col-12 col-lg-6 reverse d-flex justify-content-around px-lg-0">
           <img class="img-fluid" width="460" src="img/responsive.png" alt="">
         </div>
       </div>
@@ -258,13 +259,13 @@
   <section class="it-services mb-5">
     <div class="container">
       <div class="row justify-content-between align-items-center">
-        <div class="col-6 px-lg-0">
+        <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="it-heading mb-4">We run all Kinds of IT Services
             that grow your Business
           </h2>
           <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nisi ipsa, modi officia exercitationem magni ab magnam in quos nobis, error molestias quibusdam vitae provident autem odit maxime saepe quaerat.</p>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-lg-4 reverse">
           <a class="btn btn-light border-0 px-4 mr-3" href="">Let's Start <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
           <a class="btn btn-outline-light py-2 px-4" href="">Talk with us</a>
         </div>
