Canonical Tags Updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <meta name="distribution" content="global"/>
    <meta name="copyright" content=" © 2022. All rights reserved"/>
 
-   <link rel="canonical" href="" />
+   <link rel="canonical" href="www.ianasystems.com" />
 
    <!--Favicon-->
   <link rel="shortcut icon" href="" type="image/png">
